--- a/project 2/project 2/about_us.html
+++ b/project 2/project 2/about_us.html
@@ -29,7 +29,7 @@
     </a>
     <ul>
       <li>
-        <a href="home.html"><i class="fas fa-home"></i> HOME</a>
+        <a href="index.html"><i class="fas fa-home"></i> HOME</a>
       </li>
       <li>
         <a href="about_us.html"><i class="fas fa-info-circle"></i> ABOUT US</a>
